# tiny-worker

./: LICENSE  README.md  hello.py  playground.ipynb  pyproject.toml
tests/: test_pickle_issues.py  test_tiny_future.py  test_troupe_advanced.py  test_troupe_basics.py  test_troupe_stress.py
tiny_worker/: __init__.py  future.py  worker.py
