[project]
name = "tiny_worker"
version = "0.1.0"
description = "A tiny utility for easy paralellism in Python."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["concurrent", "futures", "workers", "async"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ruff>=0.9.2"]
test = ["pytest>=8.3.4"]

[tool.ruff]
line-length = 120

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
